examples/bad/invalid-num-of-args.oo
int mult3 (int y) {
    y = y * 3;
    return y;
}

print(mult3(3, 4)); // 15
